--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261569494132698%22%3A%22NdLpgw5f%22%7D",
+        "value": "%7B%2261569494132698%22%3A%22NdLpgw5f%22%2C%2261573157137291%22%3A%226OIn1aCN%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
     },
     {
         "key": "sb",
@@ -23,53 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61569494132698",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
-    },
-    {
-        "key": "fr",
-        "value": "03ADd4P6CUld5XICg.AWfBp7L02oqBOswy3B-UqOrZSphgZrfufEVr8BVGluY2deqFzBA.Bn9M0F..AAA.0.0.Bn9M0S.AWfMbHnUbxMoCGde90HbKGgTqzE",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
-    },
-    {
-        "key": "xs",
-        "value": "5%3A7Cv5bJXJOAA8qA%3A2%3A1744096534%3A-1%3A5903",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x733",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
     },
     {
         "key": "locale",
@@ -77,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
     },
     {
         "key": "ps_l",
@@ -86,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
     },
     {
         "key": "ps_n",
@@ -95,17 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101325237%3BT%3A29068277",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
     },
     {
         "key": "vpd",
@@ -113,16 +59,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2782%3Btimestamp%3A1744096629%3BCRCM%3A-1044206084",
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T07:17:28.459Z",
-        "lastAccessed": "2025-04-08T07:17:28.459Z"
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x733",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61573157137291",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
+    },
+    {
+        "key": "fr",
+        "value": "03ADd4P6CUld5XICg.AWc3CKhghRRwBQG-Xg5f_NT_SU2xG76oTqiAqu7V6iofBh7QCNk.Bn9M0F..AAA.0.0.Bn9Q1O.AWdKu1PvYwsc_2Qv2TC0ipl82NM",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
+    },
+    {
+        "key": "xs",
+        "value": "5%3AurhTNtaIOcrdYg%3A2%3A1744112977%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100727629%3BT%3A29068549",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2782%3Btimestamp%3A1744112982",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-08T11:49:55.573Z",
+        "lastAccessed": "2025-04-08T11:49:55.573Z"
     }
-        ]
+]
