--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
     },
     {
         "key": "locale",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -68,17 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x733",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
     },
     {
         "key": "c_user",
@@ -86,43 +77,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
     },
     {
         "key": "fr",
-        "value": "03ADd4P6CUld5XICg.AWc3CKhghRRwBQG-Xg5f_NT_SU2xG76oTqiAqu7V6iofBh7QCNk.Bn9M0F..AAA.0.0.Bn9Q1O.AWdKu1PvYwsc_2Qv2TC0ipl82NM",
+        "value": "03ADd4P6CUld5XICg.AWfX_NIWhJjuzDUW_N2okU7n81Zdep7EesOsvyF4phbKd4PcyN8.Bn9M0F..AAA.0.0.Bn-bAq.AWcx4pfu__JfZpyq9kdC52w0w4w",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
     },
     {
         "key": "xs",
-        "value": "5%3AurhTNtaIOcrdYg%3A2%3A1744112977%3A-1%3A-1",
+        "value": "1%3A8zJfbMtDbKOJvg%3A2%3A1744416811%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x733",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
     },
     {
         "key": "fbl_st",
-        "value": "100727629%3BT%3A29068549",
+        "value": "101030745%3BT%3A29073613",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2782%3Btimestamp%3A1744112982",
+        "value": "v2%3Bclient_version%3A2785%3Btimestamp%3A1744416820",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-08T11:49:55.573Z",
-        "lastAccessed": "2025-04-08T11:49:55.573Z"
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
     }
 ]
