--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,128 @@
-
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261569494132698%22%3A%22NdLpgw5f%22%2C%2261573157137291%22%3A%226OIn1aCN%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "datr",
+        "value": "Bc30Z8JyiDVF6cwdCavGIWyJ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "sb",
+        "value": "Bc30Z5-H8pzhJIkzb3afrdlT",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B733x384x2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61573157137291",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "fr",
+        "value": "03ADd4P6CUld5XICg.AWfX_NIWhJjuzDUW_N2okU7n81Zdep7EesOsvyF4phbKd4PcyN8.Bn9M0F..AAA.0.0.Bn-bAq.AWcx4pfu__JfZpyq9kdC52w0w4w",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "xs",
+        "value": "1%3A8zJfbMtDbKOJvg%3A2%3A1744416811%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x733",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101030745%3BT%3A29073613",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2785%3Btimestamp%3A1744416820",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-12T00:13:48.396Z",
+        "lastAccessed": "2025-04-12T00:13:48.396Z"
+    }
+]
